--- a/TimeTable.html
+++ b/TimeTable.html
@@ -47,12 +47,13 @@
 
         <!--星期-->
         <tr>
-            <th style="background-color: cyan">星期/節數</th>
-            <th style="background-color: cyan">星期一</th>
-            <th style="background-color: cyan">星期二</th>
-            <th style="background-color: cyan">星期三</th>
-            <th style="background-color: cyan">星期四</th>
-            <th style="background-color: cyan">星期五</th>
+            <th style="background-color: cyan"class="col-1">星期/節數</th>
+            <th style="background-color: cyan"class="col-1">星期/節數</th>
+            <th style="background-color: cyan"class="col-1">星期一</th>
+            <th style="background-color: cyan"class="col-1">星期二</th>
+            <th style="background-color: cyan"class="col-1">星期三</th>
+            <th style="background-color: cyan"class="col-1">星期四</th>
+            <th style="background-color: cyan"class="col-1">星期五</th>
         </tr>
         <!--第1節-->
         <tr>
