--- a/TimeTable.html
+++ b/TimeTable.html
@@ -17,6 +17,7 @@
     </div>
     <a href="index.html"target="_self" class="btn btn-primary"><font size="2">我不想看了</font></a>
 
+    <!--
     <div class="row">
         <div class="col-2">周次</div>
         <div class="col-2">星期一</div>
@@ -24,121 +25,119 @@
         <div class="col-2">星期三</div>
         <div class="col-2">星期四</div>
         <div class="col-2">星期五</div>
-        <!---->
+
         <div class="col-2">第一節</div>
         <div class="col-2"></div>
         <div class="col-2"></div>
         <div class="col-2"></div>
         <div class="col-2"></div>
         <div class="col-2"></div>
-        <!---->
+
         <div class="col-2">第二節</div>
         <div class="col-2"></div>
         <div class="col-2"></div>
         <div class="col-2">動態圖像設計</div>
         <div class="col-2">動態圖像設計</div>
         <div class="col-2"></div>
+    -->
 
     </div>
 
     <!--舊的-->
-
+<div class="row">
     <table border="1">
-
         <!--星期-->
         <tr>
-            <th style="background-color: cyan"class="col-1">星期/節數</th>
-            <th style="background-color: cyan"class="col-1">星期/節數</th>
-            <th style="background-color: cyan"class="col-1">星期一</th>
-            <th style="background-color: cyan"class="col-1">星期二</th>
-            <th style="background-color: cyan"class="col-1">星期三</th>
-            <th style="background-color: cyan"class="col-1">星期四</th>
-            <th style="background-color: cyan"class="col-1">星期五</th>
+            <th style="background-color: cyan"class="col-1"><p>星期/節數</p></th>
+            <th style="background-color: cyan"class="col-1"><p>星期一</p></th>
+            <th style="background-color: cyan"class="col-1"><p>星期二</p></th>
+            <th style="background-color: cyan"class="col-1"><p>星期三</p></th>
+            <th style="background-color: cyan"class="col-1"><p>星期四</p></th>
+            <th style="background-color: cyan"class="col-1"><p>星期五</p></th>
         </tr>
         <!--第1節-->
         <tr>
-            <th style="background-color: #d1d569">第一節</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
+            <th style="background-color: #d1d569"><p>第一節</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
+            <th id="hate01"><p>職場英文<br/>BW312</p></thi>
         </tr>
         <!--第2節-->
         <tr>
-            <th style="background-color: #d1d569">第二節</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th class="req-cls" id="hate">動態圖像設計<br/>(一)</th>
-            <th class="req-cls" id="hate01">數位媒體設計<br/>(三)</th>
-            <th>&nbsp;</th>
+            <th style="background-color: #d1d569"><p>第二節</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
+            <th id="hate01"><p>數位後製剪輯<br/>SYB109</p></th>
+            <th id="hate01"><p>數位媒體專題<br/>（四）<br/>SYB202</p></th>
+            <th id="hate01"><p>職場英文<br/>BW312</p></thi>
         </tr>
         <!--第3節-->
         <tr>
-            <th style="background-color: #d1d569">第三節</th>
-            <th id="hate01">互動網頁設計<br/>(一)</thi>
-            <th class="req-cls" id="hate">資訊素養與科技倫理</th>
-            <th class="req-cls" id="hate">動態圖像設計<br/>(一)</th>
-            <th class="req-cls" id="hate01">群己倫理與生命關懷</th>
-            <th class="req-cls" id="hate01">腳本與分鏡</th>
+            <th style="background-color: #d1d569"><p>第三節</p></th>
+            <th id="hate01"><p></p><br/></thi>
+            <th id="hate01"><p>互動網頁設計<br/>(二)<br/>SYB109</p></th>
+            <th id="hate01"><p>數位後製剪輯<br/>SYB109</p></th>
+            <th id="hate01"><p>程式的美麗與樂趣<br/>CYB03</p></th>
+            <th id="hate01"><p></p></th>
         </tr>
         <!--第4節-->
         <tr>
-            <th style="background-color: #d1d569">第四節</th>
-            <th id="hate01">互動網頁設計<br/>(一)</th>
-            <th class="req-cls" id="hate">資訊素養與科技倫理</th>
-            <th class="req-cls" id="hate">動態圖像設計<br/>(一)</th>
-            <th class="req-cls" id="hate01">服務學習</th>
-            <th class="req-cls" id="hate01">腳本與分鏡</th>
+            <th style="background-color: #d1d569"><p>第四節</p></th>
+            <th id="hate01"><p><br/></p></th>
+            <th id="hate01"><p>互動網頁設計<br/>(二)<br/>SYB109</p></th>
+            <th id="hate01"><p>數位後製剪輯<br/>SYB109</p></th>
+            <th id="hate01"><p>程式的美麗與樂趣<br/>CYB03</p></th>
+            <th id="hate01"><p></p></th>
         </tr>
         <!--第A節-->
         <tr>
-            <th style="background-color: #d1d569">午休</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th class="req-cls" id="hate01">週班會</th>
+            <th style="background-color: #d1d569"><p>午休</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
+            <th class="req-cls" id="hate01"><p>週班會</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
         </tr>
         <!--第5節-->
         <tr>
-            <th style="background-color: #d1d569">第五節</th>
-            <th id="hate01">故事設計</th>
-            <th>&nbsp;</th>
-            <th class="req-cls" id="hate01">聲音設計</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
+            <th style="background-color: #d1d569"><p>第五節</p></th>
+            <th id="hate01"><p></p></th>
+            <th class="req-cls" id="hate"><p>動態圖像設計<br/>(二)<br/>SYB113</p></th>
+            <th id="hate01"><p></p></th>
+            <th id="hate01"><p>小資族理財學堂<br/>SYB113<br/></p></th>
+            <th id="hate01"><p>數位內容編導實務<br/>SY522<br/></p></th>
         </tr>
         <!--第6節-->
         <tr>
-            <th style="background-color: #d1d569">第六節</th>
-            <th id="hate01">故事設計</th>
-            <th>&nbsp;</th>
-            <th class="req-cls" id="hate01">聲音設計</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
+            <th style="background-color: #d1d569"><p>第六節</p></th>
+            <th id="hate01"><p></p></th>
+            <th class="req-cls" id="hate"><p>動態圖像設計<br/>(二)<br/>SYB113</p></th>
+            <th id="hate01"><p></p></th>
+            <th id="hate01"><p>小資族理財學堂<br/>SYB113<br/></p></th>
+            <th id="hate01"><p>數位內容編導實務<br/>SY522<br/></p></th>
         </tr>
         <!--第7節-->
         <tr>
-            <th style="background-color: #d1d569">第七節</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th id="hate01">越語與文化</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
+            <th style="background-color: #d1d569"><p>第七節</p></th>
+            <th><p>&nbsp;</p></th>
+            <th class="req-cls" id="hate"><p>動態圖像設計<br/>(二)<br/>SYB113</p></th>
+            <th id="hate01"><p></p></th>
+            <th id="hate01"><p>錄音工程<br/>SYB109<br/></p></th>
+            <th><p>&nbsp;</p></th>
         </tr>
         <!--第8節-->
         <tr>
-            <th style="background-color: #d1d569">第八節</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-            <th id="hate01">越語與文化</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
+            <th style="background-color: #d1d569"><p>第八節</p></th>
+            <th><p>&nbsp;</p></th>
+            <th><p>&nbsp;</p></th>
+            <th id="hate01"><p></p></th>
+            <th id="hate01"><p>錄音工程<br/>SYB109<br/></p></th>
+            <th><p>&nbsp;</p></th>
         </tr>
     </table>
     <br/>
-
 </div>
 <script src="js/bootstrap.js"></script>
 </body>
